:recycle: refactor: refatorando código

--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ AWS_ACCESS_KEY_ID=SUA_CHAVE_DE_ACESSO
 AWS_SECRET_ACCESS_KEY=SEU_SEGREDO_DE_ACESSO
 AWS_REGION=SUA_REGIAO_AWS
 EVENTBRIDGE_BUS_NAME=NOME_DO_SEU_BARRAMENTO_EVENTBRIDGE
-API_GET_CUSTOMER_URL=SUA_URL_DA_API_GET_CUSTOMER
+API_GET_CUSTOMER_URL=localhost:3000/customer
