--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
-AWS_ACCESS_KEY_ID=SUA_CHAVE_DE_ACESSO
-AWS_SECRET_ACCESS_KEY=SEU_SEGREDO_DE_ACESSO
-AWS_REGION=SUA_REGIAO_AWS
-EVENTBRIDGE_BUS_NAME=NOME_DO_SEU_BARRAMENTO_EVENTBRIDGE
+AWS_ACCESS_KEY_ID=gravetogeek
+AWS_SECRET_ACCESS_KEY=12345
+AWS_REGION=us-east-1
+EVENTBRIDGE_BUS_NAME=RETENTATIVAS_API
+LOCALSTACK_ENDPOINT=http://localhost:4566
 API_GET_CUSTOMER_URL=localhost:3000/customer
