--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
+        "dev": "nodemon --watch 'src/**/*.ts' --exec 'nest build && sls offline'",
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
@@ -17,17 +18,25 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "install:prod": "npm install --production"
     },
     "dependencies": {
+        "@aws-sdk/client-cloudwatch-logs": "^3.777.0",
         "@aws-sdk/client-eventbridge": "^3.758.0",
         "@aws-sdk/client-sts": "^3.758.0",
         "@aws-sdk/credential-providers": "^3.768.0",
+        "@codegenie/serverless-express": "^4.16.0",
         "@nestjs/common": "^11.0.1",
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
+        "@types/pino": "^7.0.4",
+        "aws-lambda": "^1.0.7",
+        "pino": "^9.6.0",
+        "pino-pretty": "^13.0.0",
         "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "dotenv": "^16.4.7"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
@@ -37,17 +46,21 @@
         "@nestjs/testing": "^11.0.1",
         "@swc/cli": "^0.6.0",
         "@swc/core": "^1.10.7",
+        "@types/aws-lambda": "^8.10.148",
+        "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
-        "@types/node": "^22.10.7",
+        "@types/node": "^22.13.13",
         "@types/supertest": "^6.0.2",
-        "dotenv": "^16.4.7",
         "eslint": "^9.18.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-prettier": "^5.2.2",
         "globals": "^16.0.0",
         "jest": "^29.7.0",
         "prettier": "^3.4.2",
+        "serverless-esbuild": "^1.55.0",
+        "serverless-localstack": "^1.3.1",
+        "serverless-offline": "^14.4.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
